# streamvbyte64

./: Cargo.toml  LICENSE  README.md
.cargo/: cargo.toml  config
benches/: group32.rs  group64.rs  streamvbyte.rs
src/: coder_impl.rs  coding_descriptor.rs  group_impl.rs  lib.rs  raw_group.rs  tag_utils.rs  tests.rs  unsafe_group.rs
src/arch/: mod.rs  neon.rs  shuffle.rs
src/coder0124/: mod.rs  neon.rs  sse41.rs  ssse3.rs
src/coder1234/: mod.rs  neon.rs  ssse3.rs
src/coder1248/: avx2.rs  mod.rs  neon.rs  sse41.rs  ssse3.rs
src/dist1234/: mod.rs  neon.rs
src/dist1248/: mod.rs  neon.rs
src/group0124/: mod.rs  neon.rs
src/group1234/: mod.rs  neon.rs
src/group1248/: mod.rs  neon.rs
