[package]
name = "stream_vbyte_64"
version = "0.1.0"
edition = "2021"
authors = "Trevor McCulloch <mccullocht@gmail.com>"
description = "Implementation of stream-vbyte codec supporting 64-bit wide values"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
