[package]
name = "streamvbyte64"
version = "0.1.0"
edition = "2021"
authors = ["Trevor McCulloch <mccullocht@gmail.com>"]
description = "Implementation of stream-vbyte codec supporting 64-bit wide values"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crunchy = "0.2.2"
num-traits = "0.2.15"

[dev-dependencies]
criterion = "0.3.6"
rand = "0.8.5"

[[bench]]
name = "streamvbyte"
path = "benches/streamvbyte.rs"
harness = false
